@@ -1,0 +1,10 @@
+SubDir TOP src Lib INIParser ;
+
+Library netpanzeriniparser
+    :   [ Wildcard *.cpp *.hpp ]
+    :   noinstall
+;
+LinkWith netpanzeriniparser : netpanzertypes ;
+ExternalLibs netpanzeriniparser : PHYSFS ;
+Help netpanzeriniparser : "Build the netpanzer ini-file support library" ;
+
