@@ -40,13 +40,13 @@ for i in $(SUBDIRS)
 }
 
 Application netpanzer : $(SOURCES) ;
-LinkWith netpanzer : netpanzertypes netpanzerutil netpanzerxml netpanzer2d
+LinkWith netpanzer : netpanzertypes netpanzerutil netpanzeriniparser netpanzer2d
                      netpanzerarrayutil optionmm netpanzerui netpanzerparticles
                      netpanzerviews
 ;
 
 C++Flags netpanzer : -DDATADIR=\\\"$(appdatadir)\\\" ;
-ExternalLibs netpanzer : XML SDLNET SDLMIXER SDLTTF SDLIMAGE SDL READLINE ;
+ExternalLibs netpanzer : SDLNET SDLMIXER SDLTTF SDLIMAGE SDL READLINE ;
 Help netpanzer : "Build the main netpanzer executable" ;
 
 for i in $(INCLUDEDIRS)
