@@ -1,3 +1,10 @@
+04-Mai-2004 by Matthias Braun
+-fixed some gcc 3.4 issues and warnings
+-fixed some errors where nonpacked classes where used inside packed
+ datastructures
+-fixed some bugs in IOFileStream classes (no sync when destructing)
+-added new INIFile parser to replace the xml code/congigfiles
+
 18-Mar-2004 by Matthias Braun
 -integrated masterserver support into the dedicated server
 
